# darr

./: .gitignore  .gitmodules  AUTHORS  LICENCE.txt  Makefile.am  README.md  config.h.in  configure.ac
darr/: Makefile  Makefile.am  da.cpp  da.hpp  sample.txt  test.cpp
example/: Makefile.am  rand_gen.py  sample.txt  test.cpp
python/: darr.pyx  sample.py  setup.py
